fixed some issues

--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
 
 <body onload="slide_initialise();">
     <div class="slide_container_parent_super">
-        <div class="slide_container_parent" onmouseover="clears_slide_interval();"
-            onmouseout="starts_slide_interval();">
+        <div class="slide_container_parent" onmouseover="clears_slide_interval();" onmouseout="starts_slide_interval();">
             <div class="slide_container">
                 <img class="slides" src="images/slide(1).jpg">
                 <img class="slides" src="images/slide(2).jpg">
