added touchmove and touchend eventlisteners

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
         var slide_pointer = [];
         var slide_timer;
         function slide_initialise() {
+            var z = document.getElementsByClassName("slide_container")[0];
+            z.addEventListener("touchmove",clears_slide_interval,false);
+            z.addEventListener("touchend",starts_slide_interval,false);
             document.getElementsByClassName("slide_container")[0].style.width = (document.getElementsByClassName("slide_container_parent")[0].clientWidth * slides.length + 10) + "px";
             //document.getElementsByClassName("slide_controls")[0].style.height = document.getElementsByClassName("slide_container_parent")[0].clientHeight * 0.15 + "px";
             document.getElementsByClassName("slide_controls")[0].style.width = document.getElementsByClassName("slide_container_parent")[0].clientWidth + "px";
@@ -190,7 +193,7 @@
 
 <body onload="slide_initialise();">
     <div class="slide_container_parent_super">
-        <div class="slide_container_parent" onmouseover="clears_slide_interval();" onmouseout="starts_slide_interval();">
+        <div class="slide_container_parent" onmouseover="clears_slide_interval(); " onmouseout="starts_slide_interval();">
             <div class="slide_container">
                 <img class="slides" src="images/slide(1).jpg">
                 <img class="slides" src="images/slide(2).jpg">
